--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ about:
       href: https://github.com/Marcony1
     - icon: linkedin
       text: LinkedIn
-      href: https://www.linkedin.com/in/your-linkedin-profile
+      href: https://www.linkedin.com/in/marco-bravom/
     - text: resume
       icon: file-text
       href: resume.pdf
