Added dark mode + Projects tab

--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ resources: resume.pdf
 about:
   id: marco-heading
   template: jolla
-  image: profile.jpg
+  image: images/profile.jpg
   links:
     - text: Email
       icon: envelope
