--- a/projects.qmd
+++ b/projects.qmd
@@ -1,9 +1,9 @@
 ---
 title: "Projects"
 listing: 
+  type: grid
   contents: posts
   sort: "date desc"
-  type: default
   categories: true
   sort-ui: false
   filter-ui: false
