Modified format of home page

--- a/index.qmd
+++ b/index.qmd
@@ -46,20 +46,20 @@ Marco Bravo graduated from the Master of Data Science programme at The Universit
 ::: {.column width="65%"}
 ## Education
 <div class="interests-education">
-### <span class="degree">Master of Data Science, 2024</span>
+**<span class="degree">Master of Data Science, 2024</span>**<br>
 **<span class="university">The University of British Columbia, Canada</span>**
 
-### <span class="degree">Master’s Degree in Corporate Finance, 2021</span>
+**<span class="degree">Master’s Degree in Corporate Finance, 2021</span>**<br>
 **<span class="university">Universidad de las Américas Puebla, Mexico</span>** 
 <div class="specialization">
 - Specialization in Business Financial Management
 </div>
 
 
-### <span class="degree">Bachelor’s Degree in Actuarial Sciences, 2020</span>
+**<span class="degree">Bachelor’s Degree in Actuarial Sciences, 2020</span>**<br>
 **<span class="university">Universidad de las Américas Puebla, Mexico</span>**
 
-### <span class="degree">Society of Actuaries (SOA)</span>
+**<span class="degree">Society of Actuaries (SOA)</span>**
 <div class="exams">
 - Exam P
 - Exam FM
