--- a/posts/mexico_census/mexico_census.qmd
+++ b/posts/mexico_census/mexico_census.qmd
@@ -2,7 +2,7 @@
 title: "2020 Mexico Census"
 author: "Marco Bravo"
 date: "2024-04-24"
-categories: [code, analysis, dashboard, visualization, actuarial, population]
+categories: [code, analysis, dashboard, visualization, actuarial, population, geojson]
 image: "mexico_census.jpeg"
 ---
 
