Adressing text overlap bug in small screens

--- a/index.qmd
+++ b/index.qmd
@@ -79,3 +79,17 @@ Immersed in diverse and multicultural environments, Marco has developed a broad 
 
 
 :::
+
+<style>
+
+@media (max-width: 768px) {
+  .column {
+    width: 100% !important;
+    margin-bottom: 20px;
+  }
+
+  .column:nth-of-type(2) {
+    display: none;
+  }
+}
+</style>
