Reorganized bank_marketing_analysis

--- a/projects/2022_11_14_sarlaft/sarlaft.qmd
+++ b/projects/2022_11_14_sarlaft/sarlaft.qmd
@@ -4,7 +4,16 @@ description: |
   Clustering of financial information of Grupo Bancolombia in compliance with SARLAFT.
 author: ["Marco Bravo", "Nicolás Hernández"]
 date: "2022-11-14"
-categories: [Code, Analysis, Clustering, Visualization, Risk, Machine Learning, Pipelines, Unsupervised Learning]
+categories: 
+  - Code
+  - Analysis
+  - Clustering
+  - Visualization
+  - Risk
+  - Machine Learning
+  - Pipelines 
+  - Unsupervised 
+  - Learning
 image: "sarlaft.jpg"
 ---
 
