--- a/projects/2024_04_24_mexico_census/mexico_census.qmd
+++ b/projects/2024_04_24_mexico_census/mexico_census.qmd
@@ -1,8 +1,18 @@
 ---
 title: "2020 Mexico Census"
+description: |
+  A dashboard application helping understand Mexico's demographic composition.
 author: "Marco Bravo"
 date: "2024-04-24"
-categories: [Code, Analysis, Dashboard, Visualization, Actuarial, Population, Geojson, RShiny]
+categories: 
+- Code
+- Analysis
+- Dashboard
+- Visualization
+- Actuarial
+- Population
+- Geojson
+- RShiny
 image: "mexico_census.jpeg"
 ---
 
