--- a/posts/2024_04_18_Home_Assistant/home_assistant.qmd
+++ b/posts/2024_04_18_Home_Assistant/home_assistant.qmd
@@ -14,6 +14,9 @@ resources: [home_assistant.jpg]
 
 https://medium.com/@marco.bravoml/making-your-home-smarter-than-you-6ffb89d93af3
 
+<div style="text-align: justify;">
+In Project DrillSense we deliver a dynamic and predictive solution that enables Rio Tinto to monitor and analyze drilling trends more effectively. Our data product is designed to answer three critical questions: it identifies current global trends in drilling, allows for the assessment of diverse trends across different metals, and offers predictions for upcoming drilling sites. This balanced approach ensures Rio Tinto can make well-informed decisions based on the insights available.
+</div>
 
 
-
+### Dashboard Overview
