Embedded Medium post with SociableKit

--- a/posts/2024_04_18_Home_Assistant/home_assistant.qmd
+++ b/posts/2024_04_18_Home_Assistant/home_assistant.qmd
@@ -14,4 +14,4 @@ resources: [home_assistant.jpg]
 
 ### My Medium Blog Post
 
-<iframe src="https://medium.com/@marco.bravoml/making-your-home-smarter-than-you-6ffb89d93af3" width="100%" height="600px" frameborder="0"></iframe>
+<iframe src='https://widgets.sociablekit.com/medium-post/iframe/25461801' frameborder='0' width='100%' height='1000'></iframe>
