--- a/projects.qmd
+++ b/projects.qmd
@@ -7,6 +7,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  image-height: 200px
 page-layout: full
 title-block-banner: true
 ---
