--- a/talks/2024_04_11_Elevator_Pitch/elevator_pitch.qmd
+++ b/talks/2024_04_11_Elevator_Pitch/elevator_pitch.qmd
@@ -8,7 +8,7 @@ categories:
 - Home Assitant
 - Home Automation
 image: "elevator_pitch.jpg"
-resources: [elevator_pitch.jpg]
+resources: [elevator_pitch.jpg, Slide_Home-Assistant.pdf]
 ---
 
 ### Overview 
@@ -22,9 +22,10 @@ In this talk, Marco Bravo will explore the challenges of integrating smart devic
 **Location:** UBC Vancouver Campus - Forestry Building
 
 ### Video
-<iframe src='https://youtu.be/C20g6TPIE24' frameborder='0' width='100%' height='1000'></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/C20g6TPIE24" frameborder="0" allowfullscreen></iframe>
 
 
 ### Slides
-<iframe class="slide-deck ar4x3" src="https://marcony1.github.io/talks/2024_04_11_Elevator_Pitch/Slide_Home-Assistant.pdf" title="Elevator Pitch - Home Assistant">
+<iframe src="Slide_Home-Assistant.pdf" width="100%" height="600px" type="application/pdf">
+    <p>Your browser does not support PDFs. <a href="Slide_Home-Assistant.pdf">Download the PDF</a>.</p>
 </iframe>
