--- a/resume.qmd
+++ b/resume.qmd
@@ -5,58 +5,6 @@ resources: resume.pdf
 
 You can download my resume [here](resume.pdf).
 
-## Education
-
-### Master of Data Science
-**The University of British Columbia, Canada**  
-September 2023 – June 2024  
-- Master of Data Science (Domestic/International) Scholarship awarded for academic and leadership achievements.
-- GPA: 91%
-- Capstone Project: [Project DrillSense](https://github.com/Marcony1/dsensegif/blob/main/demo.gif) partnered with RioTinto. Created a dashboard with Dash library and GIS to visualize global mining trends and incorporated ML predictive algorithms (Random Forest was selected in the end) to identify future drillholes based on commodity, region, and other features.
-
-### Master’s Degree in Corporate Finance
-**Universidad de las Américas Puebla, Mexico**  
-June 2020 – December 2021  
-- Specialization in Business Financial Management
-- Summa Cum Laude, GPA 3.96/4.00
-- Institutional scholarship granted (60% of tuition covered)
-- Comprehensive Project: “Consulting and development of a business solution for a beauty products franchise that wants to expand in times of Covid”
-
-### Bachelor’s Degree in Actuarial Sciences
-**Universidad de las Américas Puebla, Mexico**  
-August 2016 – June 2020  
-- Magna Cum Laude, GPA 3.92/4.00
-- School of Science Scholar Award for achieving the highest marks in 2019
-- Excellence scholarship granted (100% of tuition covered)
-
-## Experience
-
-### Data Scientist
-**DATAKNOW S.A.S., Mexico**  
-August 2022 – August 2023  
-- Clustered databases with ML (k-means, k-prototypes, DBSCAN, etc.) to combat money laundering and financing of terrorism by profiling customers and identifying revealing insights as required by Colombian law for various Grupo Bancolombia bank entities.
-- Developed Python scripts, pipelines, and workflows to ensure the reproducibility of the best models identified for future use.
-
-### Data Analyst
-**INDRA MINSAIT BUSINESS CONSULTING, Mexico**  
-February 2022 – July 2022  
-- Identified, reconciled, and corrected Cross Currency Swaps and Bonds’ hedging strategies between the bank’s storage systems.
-- Automated Roll Over reports in VBA following IFRS9 standards, creating an output folder as a source for Salesforce and Murex to retrieve results.
-- Homologated and updated accounting rules in Murex to align with the new accounting structure of the bank.
-
-### Data Analyst (Internship)
-**Mexican Railways National Museum, Mexico**  
-June 2019 – March 2020  
-- Conducted and analyzed museum statistics surveys for the National Institute of Statistics and Geography (INEGI).
-- Developed VBA Userforms to automate the survey data capture and uploading process to INEGI’s platform.
-- Created and periodically tuned an R script to generate standardized reports with graphs, figures, and insights from Excel data.
-
-## Specialized Training
-
-- **Microsoft:** AZ-900 (Feb 2022)  
-- **Society of Actuaries:** P (July 2020), FM (December 2020), IFM (November 2021), studying for SRM  
-- **Informatica:** Cloud Data Integration (CDI) Partner Bootcamp Associate Certification (October 2022)  
-
 ## Technical Skills
 
 **Programming Languages:** Python, R, C, SQL, Power BI, Xpress IVE, Excel (Visual Basic), Murex, Salesforce, Informatica Cloud Data Integration  
@@ -66,6 +14,9 @@ June 2019 – March 2020
 **R Libraries:** Dplyr, Ggplot2, GGally, Shiny, Tidyr, Lattice, Knitr, Lubridate, Tidyverse  
 **Tools:** JupyterLab, VS Code, RStudio, Git, Docker  
 **Cloud Platforms:** Azure, AWS  
+**Microsoft:** AZ-900 (Feb 2022)  
+**Society of Actuaries:** P (July 2020), FM (December 2020), IFM (November 2021), studying for SRM  
+**Informatica:** Cloud Data Integration (CDI) Partner Bootcamp Associate Certification (October 2022) 
 
 ## Languages
 
@@ -74,20 +25,78 @@ June 2019 – March 2020
 - **French:** Fluent  
 - **German:** Conversant  
 
+## Experience
+
+### Data Science Consultant
+**Rio Tinto Group – MDS Capstone Project, Vancouver, BC**  
+*April 2024 – June 2024*  
+- Developed a global mining trends dashboard using Python, Dash, and GIS; integrated Random Forest ML algorithms to predict future drill holes, achieving 20% accuracy in predicting next drilling locations by commodity and region. [Project Link](bit.ly/drillsense)  
+- Presented insights to the board of directors, assisting the development of investment strategies based on predictive modeling.  
+
+### Data Science Consultant
+**DataKnow Consulting, Mexico City, MX**  
+*August 2022 – August 2023*  
+- Optimized fraud detection models for Grupo Bancolombia using clustering algorithms (k-means, k-prototypes, DBSCAN), improving high-risk customer identification accuracy by 25%. [Project Link](bit.ly/AML-TF)  
+- Developed an ETL data pipeline to extract data from Cloudera Impala, perform EDA, analyze data quality, and transform data using clustering models. The pipeline loads results by selecting the best model, characterizing clusters using OpenAI API, and auto-generating documentation, reducing processing time by 50%.  
+- Built an ETL pipeline for AstraZeneca using PyArrow to extract data from Redshift (SQL), transform it with clustering models for insights into medicine sales and interactions, and load the results into Power BI, reducing processing time by 30%.  
+- Resolved 98% of discrepancies in Zurich-Santander insurance data using PySpark and SQL, reducing query costs by 50%.  
+- Developed insurance pricing models by using R and ML algorithms (Neural Networks, Tree Analysis) to identify and cluster high-potential value customers, based on segment and other variables to optimize premium pricing strategies.  
+
+### Assistant Teacher | Team Leader | Co-Delegate
+**Olimpiada Mexicana de Matemáticas, Puebla, Mx**  
+*December 2015 – August 2023*  
+- Instructed advanced mathematics courses and master classes for national math competition contestants, contributing to a 20% improvement in problem-solving accuracy among participants, through engaging and in-depth training sessions.
+- Led student teams in national and regional competitions, effectively managing travel logistics and ensuring participant readiness, resulting in a 98% satisfaction rate among team members and organizers.
+- Organized and coordinated regional events for the Olympiad, delivering seamless event logistics and enhancing participant experiences with a 4.9/5 average event satisfaction rating.
+- Strengthened teaching skills through participation in OMM's annual teaching workshops (2017–2023), and refined leadership and communication skills by managing diverse student groups in high-stakes competitive settings. 
+
+### Lecturer
+**Universidad de las Américas Puebla, Puebla, Mx**  
+*January 2023 – May 2023*  
+- Empowered actuarial students to build technical programming skills in Excel, VBA, MySQL, and optimization, resulting in 85% of students demonstrating proficiency in data handling and automation tasks, by delivering hands-on coursework and real-world applications in Actuarial Programming Tools.
+- Enhanced students' communication and presentation abilities, improving clarity and confidence in presenting technical findings, by incorporating targeted sessions on effective presentation techniques and collaborative programming through GitHub.
+- Strengthened students’ collaborative programming skills, evidenced by a 4.8/5 course satisfaction rating for the GitHub module, by integrating group projects that fostered teamwork and version control practices essential for actuarial and data science roles.
+
+### Analyst
+**Indra Minsait Business Consulting – Financial Services Division, Mexico City, MX**  
+*February 2022 – July 2022*  
+- Validated and reconciled cross-currency swaps and hedging models using Monte Carlo Simulation and Black-Scholes models.  
+- Automated IFRS 9-compliant accounting workflows with VBA, Murex, and S/4 HANA, reducing processing times by 80%.  
+- Conducted reserve calculations and ensured compliance with Mexican National Banking and Securities Commission (CNBV) regulations for Banorte Bank.  
+
+### Analyst (Internship)
+**Mexican Railways National Museum, Puebla, MX**  
+*June 2019 – March 2020*  
+- Led survey analyses using R and RShiny, providing detailed insights into tourist demographics and satisfaction, which informed event planning for 20+ museum events and collaborations.
+- Automated survey data collection with VBA, improving data capture efficiency by 50% and achieving a visitor rating of 4.5/5.
+- Developed R scripts to forecast budgets with 90% confidence intervals, enhancing financial planning accuracy.
+
+## Personal Projects
+
+**Smart Home Automation with Home Assistant and AWS** (2021)  
+[Presentation](https://bit.ly/TalkHA) | [Blog](https://bit.ly/BlogHA)  
+- Created an Alexa-integrated automation system using Raspberry Pi and AWS Lambda for device control.  
+- Shared insights in blog posts and talk presentations.
+
+**Solar Savers** (2024)  
+[GitHub Repository](https://bit.ly/SolarSvrs)  
+- Developed a Python-based GIS dashboard using geospatial data to help Canadian homeowners assess solar panel investments.  
+- Calculated location-specific energy and financial savings.
+
+**2020 Mexico Census** (2024)  
+[GitHub Repository](https://bit.ly/MxCensus)  
+- Built an R Shiny GIS dashboard visualizing regional demographics from INEGI’s 2020 Mexican Census.  
+- Aimed to assist researchers and policymakers in analyzing geographic disparities in health, migration, and quality of life indicators.
+
+**Predicting Bank Marketing Success on Term Deposit Subscription** (2023)  
+[GitHub Repository](https://bit.ly/BankPred)  
+- Developed KNN, Naïve Bayes, Decision Tree, and Logistic Regression models.  
+- Achieved a 0.899 AUC with Logistic Regression through resampling and feature engineering.  
+- Delivered high precision and recall in predicting customer subscriptions.
+
 ## Awards
 
 **Math Olympiad Winner, Mexican Mathematical Olympiad**  
 2012 - 2015  
 - Junior Olympiad Bronze Medal Winner in 2012 and 2013  
 - Senior Olympiad Finalist in 2014 and 2015  
-
-## Personal Projects
-
-**Smart home automation with Home Assistant open-source software and AWS**  
-2021  
-- Created a local server with a Raspberry Pi and configured Home Assistant open-source software to control smart home devices locally without proprietary apps.
-- Developed an AWS Lambda function to connect Alexa with the local ecosystem for voice control of smart devices.
-
-**Android devices personalization and data extraction**  
-- Enabled Google Services on unsupported devices (e.g., Huawei P40/Huawei P40 Pro).  
-- Extracted stored WiFi credentials from Android devices without rooting them via data mining.
