--- a/resume.qmd
+++ b/resume.qmd
@@ -5,6 +5,8 @@ resources: resume.pdf
 
 You can download my resume [here](resume.pdf).
 
+<div style="text-align: justify;">
+
 ## Technical Skills
 
 **Programming Languages:** Python, R, C, SQL, Power BI, Xpress IVE, Excel (Visual Basic), Murex, Salesforce, Informatica Cloud Data Integration  
@@ -111,3 +113,5 @@ You can download my resume [here](resume.pdf).
 
 - Junior Olympiad Bronze Medal Winner in 2012 and 2013  
 - Senior Olympiad Finalist in 2014 and 2015  
+
+</div>
